Changelog
=========

Version 4.2.0
-------------

Date: unreleased

- Add `persist` and `expire` methods.
- Remove old and broken dummy client.


Version 4.1.0
-------------

Date: 2015-06-15

- Add plugable serializers architecture (thanks to @jdufresne)
- Add json serializer (thanks to @jdufresne)
- Add msgpack serializer (thanks to @uditagarwal)
- Implement delete_pattern using iter_scan for better performance (thanks to @lenzenmi)


Version 4.0.0
-------------

- Remove usage of deprecated `get_cache` method.
- Added connection option SOCKET_CONNECT_TIMEOUT. [Jorge C. Leitão].
- Replace setex and friends with set, because it now supports all need for atomic.
  updates (thanks to @23doors) (re revert changes from 3.8.x branch).
- Fix django 1.8 compatibilities.
- Fix django 1.9 compatibilities.
- BREAKING CHANGE: Now timeout=0 works as django specified (expires immediately)
- Now requires redis server >= 2.8
- BREAKING CHANGE: `redis_cache` is no longer a valid package name


Version 3.8.4
-------------

- Backport django 1.8 fixes from master.


Version 3.8.3
-------------

- Minor fix on regular expression for old url notation.


Version 3.8.2
-------------

- Revert some changes from 3.8.1 that are incompatible with redis server < 2.6.12


Version 3.8.1
-------------

- Fix documentation related to new url format.
- Fix documentation parts that uses now removed functions.
- Fix invalid url transformation from old format (password was not set properly)
- Replace setex and friends with set, because it now supports all need for atomic
  updates (thanks to @23doors).


Version 3.8.0
-------------

- Add compression support. (Thanks to @alanjds)
- Change package name from redis_cache to django_redis.
- Add backward compatibility layer for redis_cache package name.
- BACKWARD INCOMPATIBLE CHANGE: use StrictRedis instead of Redis class of redis-py
- Add redis dummy backend for development purposes. (Thanks to @papaloizouc)